# open-agit

./: .gitignore  README.md  document.md  pyproject.toml
docs/: USAGE.md
src/agit/: __init__.py  __main__.py
src/agit/agent/: engine.py  executor.py  gate.py  planner.py  presenter.py
src/agit/ai/: client.py  sanitizer.py
src/agit/ai/prompts/: changelog.py  commit.py  explain.py  planner.py  review.py
src/agit/cli/: add_cmd.py  agent_cmd.py  changelog_cmd.py  commit_cmd.py  config.py  doctor_cmd.py  explain_cmd.py  init.py  main.py  remote_cmd.py  replay_cmd.py  review_cmd.py  sync_cmd.py  undo_cmd.py
src/agit/config/: loader.py  schema.py  validator.py
src/agit/features/: changelog.py  commit.py  doctor.py  explain.py  review.py  sync.py
src/agit/git/: branch.py  diff.py  executor.py  log.py  repo.py
src/agit/i18n/: __init__.py
src/agit/i18n/locale/en_US/: messages.json
src/agit/i18n/locale/zh_CN/: messages.json
src/agit/journal/: reader.py  snapshot.py  undo.py  writer.py
src/agit/risk/: classifier.py  context.py  matrix.py
src/agit/utils/: console.py  errors.py
