[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agit"
version = "0.1.0"
description = "AI-Powered Git CLI — Git's AI copilot"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
agit = "agit.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
